Change binds for tmux

--- a/conf/.tmux.conf
+++ b/conf/.tmux.conf
@@ -6,20 +6,22 @@ set -g history-limit 10000
 
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-# Bind tmux's control shortcut to C-a
-set -g prefix C-a
+# Re-bind prefix key to Ctrl-Alt-Shift-a
+set -g prefix M-C-A
 unbind C-b
-bind-key C-a send-prefix
+bind-key M-C-A send-prefix
+
+# Next window: Alt-right
+# Prev window: Alt-left
+bind-key -n M-right next-window
+bind-key -n M-left previous-window
 
 set-option -g xterm-keys on
 set -g status-utf8 on
-
+set -g status-justify right
 set -g status-right-length 0
 set -g status-right ""
 
 set -g status-left-length 100
-set -g status-left "C-a n = next window | C-a p = previous window"
+set -g status-left "Alt-right = next window | Alt-left = previous window"
 
-# Hide window list
-set-window-option -g window-status-format ""
-set-window-option -g window-status-current-format ""
