kickstart: Fixes, updates..

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -181,7 +181,7 @@ cat << EOF > /etc/libvirt/qemu/networks/intranet.xml
 </network>
 EOF
 
-ln -s /etc/libvirt/qemu/networks/intranet.xml /etc/libvirt/qemu/networks/autostart/intrane.xml
+ln -s /etc/libvirt/qemu/networks/intranet.xml /etc/libvirt/qemu/networks/autostart/intranet.xml
 
 echo '192.168.100.128 glados' >> /etc/hosts
 
@@ -194,10 +194,11 @@ cat << EOF > /etc/systemd/system/open-house.service
 Description=Open House contest server
 
 [Service]
-ExecStart=/home/openhouse/contest-2016/html/run.sh
+ExecStart=/usr/bin/php -S localhost:8080 -t /home/openhouse/contest-2016/html/
 
 [Install]
 Alias=openhouse.service
+WantedBy=default.target
 EOF
 
 systemctl enable open-house.service
