kickstart: Fixes again.

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -50,14 +50,18 @@ pwpolicy luks --minlen=0 --minquality=1 --notstrict --nochanges --emptyok
 %end
 
 %post
+
+# Upgrade system and install dependencies
 dnf -y upgrade
 dnf -y install gcc-c++ qt5-qtbase qt5-qtbase-devel qt5-qtdeclarative qt5-qtdeclarative-devel qt5-qtgraphicaleffects qt5-qtquickcontrols redhat-rpm-config git virt-manager libvirt libvirt-daemon-kvm links tmux php-cli mc nmap-ncat vim nano joe emacs
 cd /var/tmp
+
+# Install cool retro term
 git clone --recursive https://github.com/Swordfish90/cool-retro-term.git
 cd /var/tmp/cool-retro-term
 qmake-qt5 && make -j && make install
-cd /home/openhouse
-git clone https://github.com/ClosedHouse/contest-2016.git
+cd ..
+rm -rf /var/tmp/cool-retro-term
 
 # Deploy virtual machine
 mkdir -p /etc/libvirt/qemu/networks
@@ -189,12 +193,16 @@ wget http://10.34.4.2:8000/rhel7.2.qcow2 -O /var/lib/libvirt/images/rhel7.2.qcow
 ### VIRTUAL MACHINE end
 
 # deploy systemd unit which provides php server
+cd /home/openhouse
+git clone https://github.com/ClosedHouse/contest-2016.git
+mv /home/openhouse/contest-2016/html /root/
+
 cat << EOF > /etc/systemd/system/open-house.service
 [Unit]
 Description=Open House contest server
 
 [Service]
-ExecStart=/usr/bin/php -S localhost:8080 -t /home/openhouse/contest-2016/html/
+ExecStart=/usr/bin/php -S localhost:8080 -t /root/html/
 
 [Install]
 Alias=openhouse.service
