Add tmux autorun script

--- a/conf/.tmux.conf
+++ b/conf/.tmux.conf
@@ -22,6 +22,7 @@ set -g status-justify right
 set -g status-right-length 0
 set -g status-right ""
 
-set -g status-left-length 100
+set -g status-left-length 101
 set -g status-left "Alt-right = next window | Alt-left = previous window"
 
+set-option -g allow-rename off
