kickstart: Fixes again :).

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -21,7 +21,7 @@ reboot
 
 # Network information
 network  --bootproto=dhcp --device=enp0s25 --ipv6=auto --activate
-network  --hostname=unused-4-108.brq.redhat.com
+network  --hostname=eden.matrix.ru
 # Root password
 rootpw --iscrypted $6$8KmA0MatDL9hcyYT$gyP/XcWs1ykLJzVyiFeRIQEaORMS9Ik4SoO74c5..Xte2YIcrdWSLpZmpGzj8di0TCMTFc3Cwbk1noeE/MXZ51
 # System timezone
@@ -193,9 +193,16 @@ wget http://10.34.4.2:8000/rhel7.2.qcow2 -O /var/lib/libvirt/images/rhel7.2.qcow
 ### VIRTUAL MACHINE end
 
 # deploy systemd unit which provides php server
+# Also do some cleanup
 cd /home/openhouse
 git clone https://github.com/ClosedHouse/contest-2016.git
 mv /home/openhouse/contest-2016/html /root/
+rm -rf /home/openhouse/contest-2016/kickstart
+rm -rf /home/openhouse/contest-2016/.git
+
+# set tmux
+rm -rf /home/openhouse/contest-2016/docs
+mv /home/openhouse/contest-2016/conf/.tmux.conf /home/openhouse/.tmux.conf
 
 cat << EOF > /etc/systemd/system/open-house.service
 [Unit]
