kickstart: Fix machine settings.
Now it's possible to start virtual machine across different HW.

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -82,8 +82,8 @@ cat << EOF > /etc/libvirt/qemu/rhel7.2.xml
     <apic/>
     <vmport state='off'/>
   </features>
-  <cpu mode='custom' match='exact'>
-    <model fallback='allow'>Haswell-noTSX</model>
+  <cpu mode='host-model'>
+    <model fallback='allow'/>
   </cpu>
   <clock offset='utc'>
     <timer name='rtc' tickpolicy='catchup'/>
@@ -167,6 +167,7 @@ cat << EOF > /etc/libvirt/qemu/rhel7.2.xml
     </memballoon>
   </devices>
 </domain>
+
 EOF
 
 cat << EOF > /etc/libvirt/qemu/networks/intranet.xml
