kickstart: Fix PHP server bindings.
When localhost string is used, then PHP server will bind
at IPv6 address.

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -210,7 +210,7 @@ cat << EOF > /etc/systemd/system/open-house.service
 Description=Open House contest server
 
 [Service]
-ExecStart=/usr/bin/php -S localhost:8080 -t /root/html/
+ExecStart=/usr/bin/php -S 127.0.0.1:8080 -t /root/html/
 
 [Install]
 Alias=openhouse.service
