--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -53,10 +53,10 @@ pwpolicy luks --minlen=0 --minquality=1 --notstrict --nochanges --emptyok
 
 # Upgrade system and install dependencies
 dnf -y upgrade
-dnf -y install gcc-c++ qt5-qtbase qt5-qtbase-devel qt5-qtdeclarative qt5-qtdeclarative-devel qt5-qtgraphicaleffects qt5-qtquickcontrols redhat-rpm-config git virt-manager libvirt libvirt-daemon-kvm links tmux php-cli mc nmap-ncat vim nano joe emacs
-cd /var/tmp
+dnf -y install gcc-c++ qt5-qtbase qt5-qtbase-devel qt5-qtdeclarative qt5-qtdeclarative-devel qt5-qtgraphicaleffects qt5-qtquickcontrols redhat-rpm-config git virt-manager libvirt libvirt-daemon-kvm links tmux php-cli mc nmap-ncat vim nano joe emacs nasm
 
 # Install cool retro term
+cd /var/tmp
 git clone --recursive https://github.com/Swordfish90/cool-retro-term.git
 cd /var/tmp/cool-retro-term
 qmake-qt5 && make -j && make install
@@ -200,6 +200,7 @@ git clone https://github.com/ClosedHouse/contest-2016.git
 mv /home/openhouse/contest-2016/html /root/
 rm -rf /home/openhouse/contest-2016/kickstart
 rm -rf /home/openhouse/contest-2016/.git
+chmod -R a+wrx /home/openhouse/contest-2016/asm
 
 # set tmux
 rm -rf /home/openhouse/contest-2016/docs
