asm: Rename wide_throught.asm to decrypt.asm

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -3,5 +3,5 @@ all: encrypt decrypt
 encrypt: encrypt.c
 	gcc -std=c99 -o encrypt encrypt.c
 
-wide_thought: wide_thought.asm
-	nasm -g -felf64 wide_thought.asm && ld -o wide_thought wide_thought.o
+decrypt: decrypt.asm
+	nasm -g -felf64 decrypt.asm && ld -o decrypt decrypt.o
