kickstart: Add nmap package to install.

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -53,7 +53,7 @@ pwpolicy luks --minlen=0 --minquality=1 --notstrict --nochanges --emptyok
 
 # Upgrade system and install dependencies
 dnf -y upgrade
-dnf -y install gcc-c++ qt5-qtbase qt5-qtbase-devel qt5-qtdeclarative qt5-qtdeclarative-devel qt5-qtgraphicaleffects qt5-qtquickcontrols redhat-rpm-config git virt-manager libvirt libvirt-daemon-kvm links tmux php-cli mc nmap-ncat vim nano joe emacs nasm
+dnf -y install gcc-c++ qt5-qtbase qt5-qtbase-devel qt5-qtdeclarative qt5-qtdeclarative-devel qt5-qtgraphicaleffects qt5-qtquickcontrols redhat-rpm-config git virt-manager libvirt libvirt-daemon-kvm links tmux php-cli mc nmap-ncat vim nano joe emacs nasm nmap
 
 # Install cool retro term
 cd /var/tmp
