kickstart: Make backup of contest.:wq

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -197,6 +197,7 @@ wget http://10.34.4.2:8000/rhel7.2.qcow2 -O /var/lib/libvirt/images/rhel7.2.qcow
 # Also do some cleanup
 cd /home/openhouse
 git clone https://github.com/ClosedHouse/contest-2016.git
+cp -R /home/openhouse/contest-2016 /root/
 mv /home/openhouse/contest-2016/html /root/
 rm -rf /home/openhouse/contest-2016/kickstart
 rm -rf /home/openhouse/contest-2016/.git
