kickstart: Remove files.

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -201,6 +201,9 @@ cp -R /home/openhouse/contest-2016 /root/
 mv /home/openhouse/contest-2016/html /root/
 rm -rf /home/openhouse/contest-2016/kickstart
 rm -rf /home/openhouse/contest-2016/.git
+rm -rf /home/openhouse/contest-2016/last_level
+rm -rf /home/openhouse/contest-2016/LICENSE
+rm -rf /home/openhouse/contest-2016/README.md
 chmod -R a+wrx /home/openhouse/contest-2016/asm
 
 # set tmux
