asm: Added sse.asm file.

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,7 +1,10 @@
-all: encrypt decrypt
+all: encrypt decrypt sse
 
 encrypt: encrypt.c
 	gcc -std=c99 -o encrypt encrypt.c
 
 decrypt: decrypt.asm
 	nasm -g -felf64 decrypt.asm && ld -o decrypt decrypt.o
+
+sse: sse.asm
+	nasm -g -felf64 sse.asm && ld -o sse sse.o
