--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -312,7 +312,9 @@ chown -R openhouse:openhouse /home/openhouse/.links
 cd /home/openhouse
 git clone https://github.com/ClosedHouse/contest-2016.git
 cp -R /home/openhouse/contest-2016 /root/
-mv /home/openhouse/contest-2016/html /root/
+ln -s /root/contest-2016/html /root/html
+rm -rf /home/openhouse/contest-2016/html
+rm -rf /home/openhouse/contest-2016/docs
 rm -rf /home/openhouse/contest-2016/kickstart
 rm -rf /home/openhouse/contest-2016/.git
 rm -rf /home/openhouse/contest-2016/last_level
