some bugfixes in levels 1, 2 and 3

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -6,5 +6,8 @@ encrypt: encrypt.c
 decrypt: decrypt.asm
 	nasm -g -felf64 decrypt.asm && ld -o decrypt decrypt.o
 
+exec: exec.asm
+	nasm -g -felf64 exec.asm && ld -o exec exec.o
+
 sse: sse.asm
 	nasm -g -felf64 sse.asm && ld -o sse sse.o
