--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -320,7 +320,7 @@ rm -rf /home/openhouse/contest-2016/.git
 rm -rf /home/openhouse/contest-2016/last_level
 rm -rf /home/openhouse/contest-2016/LICENSE
 rm -rf /home/openhouse/contest-2016/README.md
-chmod -R a+wrx /home/openhouse/contest-2016/asm
+chown -R openhouse:openhouse /home/openhouse/contest-2016/task*
 
 # set tmux
 rm -rf /home/openhouse/contest-2016/docs
