html/task4: Fixess...

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -313,6 +313,7 @@ cd /home/openhouse
 git clone https://github.com/ClosedHouse/contest-2016.git
 cp -R /home/openhouse/contest-2016 /root/
 ln -s /root/contest-2016/html /root/html
+rm -rf /home/openhouse/contest-2016/asm
 rm -rf /home/openhouse/contest-2016/html
 rm -rf /home/openhouse/contest-2016/docs
 rm -rf /home/openhouse/contest-2016/kickstart
